Fix for whitespace issues in shops

--- a/Tinville/static/css/designer_shop/styles.css
+++ b/Tinville/static/css/designer_shop/styles.css
@@ -520,8 +520,10 @@
 }
 
 .itemSize {
-    width:auto;
-    max-height:250px;
+    min-width: 200px;
+    min-height: 250px;
+    max-width: 200px;
+    max-height: 250px;
 }
 
 
